<resources>
    <string name="app_name">Wolox Android Bootstrap</string>
    <string name="wolox_company_name">Wolox, part of Accenture</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="invalid_credentials">Invalid credentials</string>
    <string name="server_error">Server error</string>
    <string name="empty_username_error">Username must not be empty!</string>
    <string name="empty_password_error">Password must not be empty!</string>
    <string name="ok">OK</string>
    <string name="posts_error">Error retrieving posts</string>
    <string name="no_posts_to_show">Currently we have no posts to show</string>

    <!-- Profile-->
    <string name="profile_user_id">ID: %1$s</string>
    <string name="profile_name">Nombre: %1$s</string>
    <string name="profile_username">Nombre de usuario: %1$s</string>
    <string name="profile_email">Email: %1$s</string>
    <string name="profile_phone">Teléfono: %1$s</string>
    <string name="profile_website">Sitio Web: %1$s</string>
    <string name="profile_albums_button">Albums</string>
    <string name="profile_todos_button">To-Dos</string>
    <string name="profile_posts_button">Posts</string>
    <string name="profile_logout_button">Logout</string>

    <!-- Item album-->
    <string name="album_item_user_id">User ID: %1$s</string>
    <string name="album_item_id">ID: %1$s</string>
    <string name="album_item_title">Title: %1$s</string>

    <string name="lorem">
		Lorem ipsum dolor sit amet, consectetur adipiscing elit.
		In mollis est vitae erat laoreet consectetur. Mauris dui mauris,
		dictum vel egestas vel, porta sed ante. Phasellus congue viverra ipsum,
		in elementum arcu ultricies nec.Morbi tincidunt nisl lacinia, placerat nisi eget, luctus tortor.
		Morbi efficitur dictum leo, sit amet volutpat lorem sodales nec. Quisque et erat et turpis fringilla condimentum.
		Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris auctor vulputate libero vitae iaculis.
		Curabitur id blandit quam. Praesent massa ante, pulvinar vitae sagittis commodo, scelerisque porttitor eros.
		Mauris suscipit a enim nec congue. Mauris tristique cursus aliquet. Nunc quis hendrerit nunc. Praesent tristique tellus purus,
		a pretium ex gravida id. Cras laoreet malesuada nulla, at bibendum metus ultricies a. Fusce eu ornare arcu. Proin ut molestie est.
		Vestibulum quis vehicula erat. Nam sed tempus nibh. Sed tortor ante, maximus venenatis odio sed, ultricies maximus lectus.
		Aliquam sed volutpat ligula. Integer bibendum, magna ac lacinia suscipit,
		risus libero rutrum justo, sed tempus augue tellus eget est. Curabitur convallis augue nisl,
		id efficitur urna posuere faucibus. Ut sed egestas nulla, eu finibus metus. Nunc a arcu ante.
		Aenean ullamcorper dolor non condimentum congue. Aenean mauris nunc, pellentesque at placerat vitae,
		aliquet quis orci. Curabitur maximus augue ut bibendum sagittis.
	</string>
</resources>