<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="@dimen/dimen_32dp"
        android:paddingBottom="@dimen/dimen_16dp">

        <LinearLayout
            android:id="@+id/user_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/user_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_16dp"
                android:text="@string/profile_user_id" />

            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_16dp"
                android:text="@string/profile_name" />

                <TextView
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_16dp"
                    android:text="@string/profile_username" />

                <TextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_16dp"
                    android:text="@string/profile_email" />

                <TextView
                    android:id="@+id/phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_16dp"
                    android:text="@string/profile_phone" />

                <TextView
                    android:id="@+id/website"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_16dp"
                    android:text="@string/profile_website" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/buttons_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="@dimen/dimen_16dp"
            app:layout_constraintTop_toBottomOf="@+id/user_info">

            <Button
                android:id="@+id/albums_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_albums_button"
                app:layout_constraintTop_toBottomOf="@id/passwordInput"
                app:layout_constraintStart_toStartOf="@id/passwordInput"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/todos_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_todos_button"
                app:layout_constraintTop_toBottomOf="@id/passwordInput"
                app:layout_constraintStart_toStartOf="@id/passwordInput"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/posts_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_posts_button"
                app:layout_constraintTop_toBottomOf="@id/passwordInput"
                app:layout_constraintStart_toStartOf="@id/passwordInput"
                style="?android:attr/buttonBarButtonStyle" />

        </LinearLayout>

        <Button
            android:id="@+id/logout_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_logout_button"
            android:layout_marginTop="@dimen/dimen_16dp"
            app:layout_constraintTop_toBottomOf="@id/buttons_bar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
